--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <img class="logo" src="./assets/logo.gif" alt="logo-convert-money">
+    <img class="logo" src="./assets/logo.gif" alt="logo-money">
 
     <main>
 
@@ -55,6 +55,8 @@
                 <p class="currency-value">US$ 0.0</p>
             </div>
         </section>
+
+        <button class="btnReset">Limpar</button>
 
     </main>
 
